# whisper-v3-server

./: .env.example  .gitignore  Dockerfile  README.md  __init__.py  app.py  config.py  main.py  pyproject.toml  setup.py
adapters/: __init__.py
adapters/input/: __init__.py  audio_router.py  result_presenter.py  transcribe_router.py
adapters/output/: __init__.py  result_presenter.py
adapters/services/: __init__.py  chunked_diarization_service.py  fake_diarization_service.py  pyannote_diarization_service.py  whisper_transcription_service.py
application/services/: __init__.py  diarization_service.py  transcription_service.py
application/use_cases/: __init__.py  store_audio_usecase.py  transcribe_audio_usecase.py
composition_root/: container.py
constant/: asr_config.py  cli.py  dataset_util.py  model_util.py  output_format.py
domain/: audio_clip.py  repositories.py  services.py  speaker_segment.py  transcription_text.py  value_objects.py
domain/ports/: __init__.py  diarization_port.py  transcription_port.py
helper/: output_converter.py  srt_util.py
infrastructure/: audio_storage.py  di_container.py  pyannote_diarization.py  transcription_text_storage.py  whisper_transcription.py
infrastructure/repositories/: audio_clip_repository_impl.py  audio_repository_impl.py  speaker_segment_repository_impl.py  transcription_repository_impl.py  transcription_text_repository_impl.py
shared/: __init__.py
shared/utils/: __init__.py  audio_converter.py
ui/: config.js  index.html
v3/: __init__.py  audio_processing.py  main.py  pipeline_util.py
(+10 files in other folders)
